--- a/2_media/basic avg loop.ipynb
+++ b/2_media/basic avg loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,14 @@
     "import numpy as np\n",
     "from pandas import read_csv\n",
     "import math\n",
+    "from math import sqrt\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +55,15 @@
     "    #Metrics\n",
     "    print('Calculating metric')\n",
     "    rmsle_i = rmsle(y_test,y_pred)\n",
+    "    rmse_i = sqrt(mean_squared_error(y_test, y_pred))\n",
     "    \n",
-    "    return rmsle_i\n",
+    "    return rmsle_i,rmse_i\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -133,12 +136,58 @@
     "\n",
     "i = 0\n",
     "rmsle_t = []\n",
+    "rmse_t = []\n",
     "for filename in all_files:\n",
     "    df = pd.read_csv(filename, index_col=None, header=0)\n",
-    "    rmsle_i = basic_avg(df)\n",
+    "    rmsle_i, rmse_i = basic_avg(df)\n",
     "    rmsle_t.append(round(rmsle_i,3))\n",
+    "    rmse_t.append(round(rmse_i,3))\n",
     "    i = i + 1\n",
     "    print('filename number ' + str(i) + ' of ' + str(len(all_files)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE\n",
+      "Min\n",
+      "0.079\n",
+      "Avg\n",
+      "0.14114285714285715\n",
+      "Max\n",
+      "0.254\n",
+      "RMSE\n",
+      "Min\n",
+      "0.101\n",
+      "Avg\n",
+      "0.20235714285714287\n",
+      "Max\n",
+      "0.394\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('RMSLE')\n",
+    "print('Min')\n",
+    "print(min(rmsle_t))\n",
+    "print('Avg')\n",
+    "print(np.average(rmsle_t))\n",
+    "print('Max')\n",
+    "print(max(rmsle_t))\n",
+    "\n",
+    "print('RMSE')\n",
+    "print('Min')\n",
+    "print(min(rmse_t))\n",
+    "print('Avg')\n",
+    "print(np.average(rmse_t))\n",
+    "print('Max')\n",
+    "print(max(rmse_t))\n"
    ]
   },
   {
