--- a/3_time_series/ARIMA loop.ipynb
+++ b/3_time_series/ARIMA loop.ipynb
@@ -17,7 +17,9 @@
     "from statsmodels.graphics.tsaplots import plot_pacf\n",
     "from statsmodels.tsa.arima_model import ARIMA\n",
     "from sklearn import metrics\n",
-    "import math"
+    "import math\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from math import sqrt"
    ]
   },
   {
@@ -58,13 +60,14 @@
     "    #Metrics\n",
     "    print('Calculating metrics')\n",
     "    rmsle_i = rmsle(y_test,y_pred)\n",
-    "\n",
-    "    return rmsle_i"
+    "    rmse_i = sqrt(mean_squared_error(y_test, y_pred))\n",
+    "    \n",
+    "    return rmsle_i,rmse_i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -409,13 +412,59 @@
     "\n",
     "i = 0\n",
     "rmsle_t = []\n",
+    "rmse_t = []\n",
     "for filename in all_files:\n",
     "    df = pd.read_csv(filename)\n",
     "    df.set_index(\"tstp\", inplace = True) \n",
-    "    rmsle_i = arima_loop(df)\n",
+    "    rmsle_i,rmse_i = arima_loop(df)\n",
     "    rmsle_t.append(round(rmsle_i,3))\n",
+    "    rmse_t.append(round(rmse_i,3))\n",
     "    i = i + 1\n",
     "    print('filename number ' + str(i) + ' of ' + str(len(all_files)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE\n",
+      "Min\n",
+      "0.079\n",
+      "Avg\n",
+      "0.14114285714285715\n",
+      "Max\n",
+      "0.253\n",
+      "RMSE\n",
+      "Min\n",
+      "0.101\n",
+      "Avg\n",
+      "0.20214285714285715\n",
+      "Max\n",
+      "0.392\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('RMSLE')\n",
+    "print('Min')\n",
+    "print(min(rmsle_t))\n",
+    "print('Avg')\n",
+    "print(np.average(rmsle_t))\n",
+    "print('Max')\n",
+    "print(max(rmsle_t))\n",
+    "\n",
+    "print('RMSE')\n",
+    "print('Min')\n",
+    "print(min(rmse_t))\n",
+    "print('Avg')\n",
+    "print(np.average(rmse_t))\n",
+    "print('Max')\n",
+    "print(max(rmse_t))"
    ]
   },
   {
