--- a/0_analysis/descriptive_general.ipynb
+++ b/0_analysis/descriptive_general.ipynb
@@ -2059,7 +2059,7 @@
     }
    ],
    "source": [
-    "weather_hourly_small = weather_hourly[['temperature','time','pressure','apparentTemperature','windSpeed','humidity']]"
+    "weather_hourly_small = weather_hourly[['temperature','timestamp','pressure','apparentTemperature','windSpeed','humidity']]"
    ]
   },
   {
